--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -4,6 +4,8 @@ bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
 
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
 set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
